codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Save logs?

  The following files will be saved locally:
    • xcodex-feedback-<thread-id>.log

› 1. Yes  Save the current xcodex session logs for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
